--- a/requirements.txt
+++ b/requirements.txt
@@ -10,10 +10,12 @@ django-allauth==65.9.0
 djangorestframework==3.16.0
 djangorestframework_simplejwt==5.5.0
 drf-spectacular==0.28.0
+gunicorn==23.0.0
 idna==3.10
 inflection==0.5.1
 jsonschema==4.24.0
 jsonschema-specifications==2025.4.1
+packaging==25.0
 pycparser==2.22
 PyJWT==2.9.0
 python-dotenv==1.1.0
